Updated particles to be blurred and to be fixed on page for no scrollbar

--- a/HomePageStyleSheet.css
+++ b/HomePageStyleSheet.css
@@ -8,9 +8,10 @@
 .pictures{grid-area: pictures;}
 
 #particles-js {
-  position:absolute; 
+  filter: blur(0.2rem);
+  position:fixed; 
   width:100%;
-  height:100em; 
+  height:100vh; 
   z-index:-1;
 }
 .featureHeader{
